Реализованный функционал: - Загрузка городов и станций - Поиск по слову на экранах выбора города и станции - Загрузка и отображение рейсов - Экран фильтров
